--- a/src/main/webapp/layout.css
+++ b/src/main/webapp/layout.css
@@ -1,3 +1,7 @@
+body {
+    background-color: lightblue !important; /* Add !important to override other potential styles for testing */
+}
+
 #erro {
     width: 80%;
     margin: 0 auto;
